[gd_scene load_steps=72 format=3 uid="uid://bp5ogypo5hplk"]

[ext_resource type="Texture2D" uid="uid://c4o2t6rqvyetu" path="res://Assets/forest.png" id="1_j4qnp"]
[ext_resource type="Script" uid="uid://cngsrxo872rha" path="res://Main.gd" id="1_kjvhd"]
[ext_resource type="Script" uid="uid://dtgob0cxyu41g" path="res://Scripts/CardManager.gd" id="1_uu6xs"]
[ext_resource type="PackedScene" uid="uid://d1gs7uwfydqtl" path="res://Scenes/CardSlot.tscn" id="3_fos0i"]
[ext_resource type="Script" uid="uid://q78iof85rl4o" path="res://Deck.gd" id="4_3dxm6"]
[ext_resource type="Script" uid="uid://c8rum7av4se0o" path="res://Scripts/PlayerHand.gd" id="4_cm0pq"]
[ext_resource type="Texture2D" uid="uid://hrlflh3v4b02" path="res://Assets/Cards/Deck.png" id="4_fos0i"]
[ext_resource type="Script" uid="uid://b10yvexdw8vk7" path="res://Scripts/InputManager.gd" id="6_lgr22"]
[ext_resource type="Texture2D" uid="uid://dia0m8dqst5fq" path="res://Assets/Yellow.png" id="8_fpfj3"]
[ext_resource type="Texture2D" uid="uid://bq8pj65le0o1v" path="res://Assets/Blue.png" id="9_sc1dx"]
[ext_resource type="Texture2D" uid="uid://bcip4r81tmqkt" path="res://Assets/Character.png" id="10_kjvhd"]
[ext_resource type="Texture2D" uid="uid://bjtrhserhbxtv" path="res://Assets/Entities/brownieatk.png" id="11_5tuhn"]
[ext_resource type="Texture2D" uid="uid://d14gr3mh1lc6c" path="res://Assets/Entities/brownieded.png" id="12_2gh4u"]
[ext_resource type="Texture2D" uid="uid://3eep0c25gu5j" path="res://Assets/Entities/browniedef.png" id="13_devvj"]
[ext_resource type="Texture2D" uid="uid://b6yps3qdedqvt" path="res://Assets/Entities/browniehurt.png" id="14_3b0ty"]
[ext_resource type="Texture2D" uid="uid://bfch56yi0h18r" path="res://Assets/Entities/brownieidle.png" id="15_bg4s2"]
[ext_resource type="Texture2D" uid="uid://cf272pbxig182" path="res://Assets/buttonLong_beige.png" id="17_5tuhn"]
[ext_resource type="Texture2D" uid="uid://bw4ebs0r83h8l" path="res://Assets/buttonLong_beige_pressed.png" id="18_2gh4u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dxm6"]
size = Vector2(180, 266)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhcpw"]
atlas = ExtResource("11_5tuhn")
region = Rect2(0, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxvw5"]
atlas = ExtResource("11_5tuhn")
region = Rect2(91, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrxkg"]
atlas = ExtResource("11_5tuhn")
region = Rect2(182, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqvbp"]
atlas = ExtResource("11_5tuhn")
region = Rect2(273, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hri7i"]
atlas = ExtResource("11_5tuhn")
region = Rect2(364, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3rk5"]
atlas = ExtResource("11_5tuhn")
region = Rect2(455, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mvff"]
atlas = ExtResource("11_5tuhn")
region = Rect2(546, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oye8v"]
atlas = ExtResource("11_5tuhn")
region = Rect2(637, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_40n85"]
atlas = ExtResource("11_5tuhn")
region = Rect2(728, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb15f"]
atlas = ExtResource("11_5tuhn")
region = Rect2(819, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sph85"]
atlas = ExtResource("12_2gh4u")
region = Rect2(0, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7g6l"]
atlas = ExtResource("12_2gh4u")
region = Rect2(91, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi5kq"]
atlas = ExtResource("12_2gh4u")
region = Rect2(182, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mkgo"]
atlas = ExtResource("12_2gh4u")
region = Rect2(273, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ccbu"]
atlas = ExtResource("12_2gh4u")
region = Rect2(364, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny7u2"]
atlas = ExtResource("12_2gh4u")
region = Rect2(455, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3yn0"]
atlas = ExtResource("13_devvj")
region = Rect2(0, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w2xm"]
atlas = ExtResource("13_devvj")
region = Rect2(91, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gngx1"]
atlas = ExtResource("13_devvj")
region = Rect2(182, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt61w"]
atlas = ExtResource("13_devvj")
region = Rect2(273, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8qla"]
atlas = ExtResource("13_devvj")
region = Rect2(364, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1tbi"]
atlas = ExtResource("13_devvj")
region = Rect2(455, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2s76"]
atlas = ExtResource("13_devvj")
region = Rect2(546, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4ese"]
atlas = ExtResource("13_devvj")
region = Rect2(637, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rchyr"]
atlas = ExtResource("13_devvj")
region = Rect2(728, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pljue"]
atlas = ExtResource("13_devvj")
region = Rect2(819, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx4yo"]
atlas = ExtResource("13_devvj")
region = Rect2(910, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tfui"]
atlas = ExtResource("13_devvj")
region = Rect2(1001, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_38apo"]
atlas = ExtResource("13_devvj")
region = Rect2(1092, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_khphd"]
atlas = ExtResource("14_3b0ty")
region = Rect2(0, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4yo4"]
atlas = ExtResource("14_3b0ty")
region = Rect2(91, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_im7ls"]
atlas = ExtResource("14_3b0ty")
region = Rect2(182, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a34eg"]
atlas = ExtResource("14_3b0ty")
region = Rect2(273, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_via5u"]
atlas = ExtResource("14_3b0ty")
region = Rect2(364, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac6pf"]
atlas = ExtResource("14_3b0ty")
region = Rect2(455, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek63v"]
atlas = ExtResource("14_3b0ty")
region = Rect2(546, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaklg"]
atlas = ExtResource("14_3b0ty")
region = Rect2(637, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bst2"]
atlas = ExtResource("14_3b0ty")
region = Rect2(728, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uy3go"]
atlas = ExtResource("14_3b0ty")
region = Rect2(819, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf3a2"]
atlas = ExtResource("14_3b0ty")
region = Rect2(910, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdb40"]
atlas = ExtResource("15_bg4s2")
region = Rect2(0, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h1yq"]
atlas = ExtResource("15_bg4s2")
region = Rect2(91, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fykug"]
atlas = ExtResource("15_bg4s2")
region = Rect2(182, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrbn1"]
atlas = ExtResource("15_bg4s2")
region = Rect2(273, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfjnh"]
atlas = ExtResource("15_bg4s2")
region = Rect2(364, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mplfx"]
atlas = ExtResource("15_bg4s2")
region = Rect2(455, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyych"]
atlas = ExtResource("15_bg4s2")
region = Rect2(546, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xncey"]
atlas = ExtResource("15_bg4s2")
region = Rect2(637, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_skfvt"]
atlas = ExtResource("15_bg4s2")
region = Rect2(728, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn00d"]
atlas = ExtResource("15_bg4s2")
region = Rect2(819, 0, 91, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy6xi"]
atlas = ExtResource("15_bg4s2")
region = Rect2(910, 0, 91, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_a43ws"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhcpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxvw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrxkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqvbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hri7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3rk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mvff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oye8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40n85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb15f")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sph85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7g6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi5kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mkgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ccbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny7u2")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3yn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w2xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gngx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt61w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8qla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1tbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2s76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4ese")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rchyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pljue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx4yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tfui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38apo")
}],
"loop": true,
"name": &"defense",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khphd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4yo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im7ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a34eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_via5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac6pf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek63v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaklg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bst2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uy3go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf3a2")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdb40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h1yq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fykug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrbn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfjnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mplfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyych")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xncey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skfvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn00d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy6xi")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Main" type="Node2D"]
z_index = -4
script = ExtResource("1_kjvhd")

[node name="Forest" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(960, 540)
scale = Vector2(1.92, 1.35)
texture = ExtResource("1_j4qnp")

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_uu6xs")

[node name="CardSlot" parent="." instance=ExtResource("3_fos0i")]
position = Vector2(928, 480)

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("4_cm0pq")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(150, 890)
script = ExtResource("4_3dxm6")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
z_index = -2
texture = ExtResource("4_fos0i")

[node name="Area2D" type="Area2D" parent="Deck"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
shape = SubResource("RectangleShape2D_3dxm6")
debug_color = Color(3.56168e-06, 0.579683, 0.676581, 0.42)

[node name="RichTextLabel" type="RichTextLabel" parent="Deck"]
modulate = Color(0, 0, 0, 1)
offset_left = -9.0
offset_top = -28.0
offset_right = 31.0
offset_bottom = 12.0
scale = Vector2(2, 2)
text = "0"

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("6_lgr22")

[node name="Yellow" type="Sprite2D" parent="."]
position = Vector2(144, 536)
scale = Vector2(4.375, 4.375)
texture = ExtResource("8_fpfj3")

[node name="RichTextLabel" type="RichTextLabel" parent="Yellow"]
modulate = Color(0, 0, 0, 1)
offset_left = 18.0571
offset_top = -12.1143
offset_right = 58.0571
offset_bottom = 27.8857
text = "3"

[node name="Blue" type="Sprite2D" parent="."]
position = Vector2(148, 676)
scale = Vector2(4.25, 4.25)
texture = ExtResource("9_sc1dx")

[node name="Character" type="Sprite2D" parent="."]
position = Vector2(536, 648)
scale = Vector2(4.8125, 4.8125)
texture = ExtResource("10_kjvhd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1448, 592)
scale = Vector2(9.24687, 9.24687)
sprite_frames = SubResource("SpriteFrames_a43ws")
animation = &"attack"
autoplay = "idle"

[node name="Timer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="Timer"]

[node name="TimerBarA" type="ProgressBar" parent="Timer/CanvasLayer"]
modulate = Color(1, 0, 0, 1)
offset_left = 320.0
offset_top = 32.0
offset_right = 1600.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
max_value = 180.0
value = 100.0

[node name="GameTimerA" type="Timer" parent="Timer/CanvasLayer"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="TimerBarB" type="ProgressBar" parent="Timer/CanvasLayer"]
modulate = Color(0.3125, 1, 0, 1)
offset_left = 448.0
offset_top = 480.0
offset_right = 640.0
offset_bottom = 512.0
max_value = 10.0
value = 10.0
show_percentage = false

[node name="GamerTimerB" type="Timer" parent="Timer/CanvasLayer"]
wait_time = 10.0

[node name="EndTurn" type="TextureButton" parent="Timer"]
layout_mode = 1
anchors_preset = -1
offset_left = 832.0
offset_top = 296.0
offset_right = 1022.0
offset_bottom = 360.0
texture_normal = ExtResource("17_5tuhn")
texture_pressed = ExtResource("18_2gh4u")

[connection signal="timeout" from="Timer/CanvasLayer/GameTimerA" to="." method="_on_game_timer_a_timeout"]
[connection signal="timeout" from="Timer/CanvasLayer/GamerTimerB" to="." method="_on_game_timer_b_timeout"]
[connection signal="pressed" from="Timer/EndTurn" to="." method="_on_switch_button_pressed"]
